--- a/package.json
+++ b/package.json
@@ -14,6 +14,7 @@
     "react-password-checklist": "^1.5.0",
     "react-router-dom": "^6.21.3",
     "react-scripts": "5.0.1",
+    "reactjs-popup": "^2.0.6",
     "web-vitals": "^2.1.4"
   },
   "scripts": {
